--- a/src/app/inventory/pages/singUpPage/singUpPage.component.html
+++ b/src/app/inventory/pages/singUpPage/singUpPage.component.html
@@ -1,31 +1,25 @@
+<div class="overflow-y-hidden h-screen flex items-center justify-center px-4 sm:px-6 lg:px-8">
 
-<div class=" overflow-y-hidden h-screen flex items-center justify-center ">
+  <form class="flex flex-col gap-4 w-full max-w-md">
 
-        <form class="flex flex-col gap-4">
+      <label class="text-2xl text-center">
+          Registro
+      </label>
 
+      <input class="text-base border-2 w-full p-2 border-blue-400 rounded-xl mb-3"
+             type="text"
+             placeholder="Name">
 
+      <input class="text-base border-2 w-full p-2 border-blue-400 rounded-xl mb-3"
+             type="text"
+             placeholder="Email">
 
-                    <label class="text-2xl text-center  ">
-                        Registro
-                    </label>
+      <input class="text-base border-2 w-full p-2 border-blue-400 rounded-xl mb-3"
+             type="text"
+             placeholder="Password">
 
+      <button class="button w-full py-2 mt-2">Sing Up</button>
 
-                    <input class="text-base/6 border-2 w-100 p-2 border-blue-400 rounded-xl mb-3"
-                    type="text"
-                    placeholder="Name">
-
-                    <input class="text-base/6 border-2 w-100 p-2 border-blue-400 rounded-xl mb-3"
-                    type="text"
-                    placeholder="Email">
-
-                    <input class="text-base/6 border-2 w-100 p-2 border-blue-400 rounded-xl mb-3"
-                    type="text"
-                    placeholder="Password">
-
-                    <button class="button">Sing Up</button>
-
-
-        </form>
-
+  </form>
 
 </div>
