--- a/src/app/components/card/cardInventory/cardInventory.component.html
+++ b/src/app/components/card/cardInventory/cardInventory.component.html
@@ -3,7 +3,7 @@
 >
   <div class="relative mx-4 mt-4 overflow-hidden rounded-xl h-48 sm:h-50 md:h-56 lg:h-60">
     <img
-      src="https://images.unsplash.com/photo-1629367494173-c78a56567877"
+      src="{{image()}}"
       alt="card-image"
       class="object-cover w-full h-full"
     />
