--- a/src/app/components/sideBar/sideBar/sideBar.component.html
+++ b/src/app/components/sideBar/sideBar/sideBar.component.html
@@ -36,7 +36,7 @@
     <input
       class="w-full px-3 sm:px-4 py-2 sm:py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all text-sm sm:text-base"
       type="text"
-      placeholder="Image"
+      placeholder="Image URL"
       [value]="image()"
       (input)="image.set(txtImage.value)"
       #txtImage
