--- a/src/app/inventory/pages/editPage/editPage/editPage.html
+++ b/src/app/inventory/pages/editPage/editPage/editPage.html
@@ -51,7 +51,7 @@
         <input
           type="text"
           class="w-full px-3 sm:px-4 py-2 sm:py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all text-sm sm:text-base"
-          placeholder="image"
+          placeholder="Image URL"
           [value]="image()"
           (input)="image.set(txtImage.value)"
           #txtImage
@@ -73,11 +73,10 @@
 
     @if(id() != null){
       <button (click)="productEdit()" type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-2.5 sm:py-3 rounded-lg transition-colors mt-4">
-        Send
+        Save
       </button>
     }
 
-    <p class="mt-2 text-sm sm:text-base">ID actual: {{ id() }}</p>
   </div>
 
 </div>
