--- a/src/app/inventory/pages/editPage/editPage/editPage.html
+++ b/src/app/inventory/pages/editPage/editPage/editPage.html
@@ -2,9 +2,16 @@
 
   <div class="w-full max-w-md sm:max-w-lg md:max-w-xl lg:max-w-2xl bg-white rounded-xl shadow-lg p-6 sm:p-8 relative">
 
-    <div (click)="showEditPage()" class="bg-gray-200 w-8 h-8 flex items-center justify-center rounded-full text-white absolute top-3 right-3 cursor-pointer">
-      x
-    </div>
+   <div
+  (click)="showEditPage()"
+  class="bg-gray-400 hover:bg-gray-500 w-8 h-8 flex items-center justify-center rounded-full text-white absolute top-3 right-3 cursor-pointer transition-colors duration-200"
+>
+
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+  </svg>
+</div>
+
 
     <h2 class="text-2xl sm:text-3xl font-bold text-gray-900 mb-6 text-center">Edit Product</h2>
 
